--- a/build.gradle
+++ b/build.gradle
@@ -17,4 +17,6 @@ sourceSets {
 }
 dependencies {
     compile 'junit:junit:4.12'
+    compile 'org.mongodb:mongo-java-driver:2.12.3'
+    compile 'org.mongodb:mongodb-driver:3.4.3'
 }
